# simulate

fonts/: CMakeLists.txt
fonts/include/glad/: glad.h
fonts/src/: glad.c  main.cpp  stroke_sort.cpp  stroke_sort.h
lattice_font/: a.out  lattice_font.cpp
